--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+prost = "0.11.3"
+tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
+tonic = "0.8.3"
+
+[build-dependencies]
+tonic-build = "0.8.4"
